2026-02-21T01:03:03Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22247198446 # 884
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-21
* notice: last 14d: unq all: 5 5
* notice: prev accum: outdated-unq outdated-all / unq all: 697 1091 / 700 1094
* notice: next accum: outdated-unq outdated-all / unq all: 697 1091 / 702 1096
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [] / []

2026-02-19T01:09:06Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22164382966 # 882
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-19
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 695 1089 / 700 1094
* notice: next accum: outdated-unq outdated-all / unq all: 697 1091 / 700 1094
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-29 2026-01-30] / []

2026-02-18T01:09:51Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22122371471 # 881
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-18
* notice: last 14d: unq all: 5 5
* notice: prev accum: outdated-unq outdated-all / unq all: 695 1089 / 697 1091
* notice: next accum: outdated-unq outdated-all / unq all: 695 1089 / 700 1094
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-20 2026-01-21 2026-01-22 2026-01-23 2026-01-24 2026-01-25 2026-01-26 2026-01-27 2026-01-28] / []

2026-02-17T01:07:17Z: