@@ -1,3 +1,12 @@
+2026-02-22T01:07:32Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22267783142 # 885
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-22
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 697 1091 / 702 1096
+* notice: next accum: outdated-unq outdated-all / unq all: 697 1091 / 699 1093
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [] / []
+
 2026-02-21T01:03:03Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22247198446 # 884
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-21
